--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/gusanchefullstack/customers_api#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "@prisma/client": "^4.16.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "mongodb": "^5.6.0"
   },
   "devDependencies": {
-    "prisma": "^4.15.0"
+    "prisma": "^4.16.0"
   }
 }
