--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   },
   "homepage": "https://github.com/gusanchefullstack/customers_api#readme",
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "@prisma/client": "^4.16.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongodb": "^5.6.0"
+    "g": "^2.0.1",
+    "mongodb": "^5.6.0",
+    "nodemon": "^2.0.22"
   },
   "devDependencies": {
     "prisma": "^4.16.0"
